backend/internal/architecture/testdata/invalid/internal/platform/fake_embed.go
package platform

import _ "embed"

//go:embed asset.txt
var fakeEmbedded = map[string]string{}
